# evo-track

./: .gitignore  NOTES.md  README-TODO.md  README.md  exec-vnc.sh
bluenet/: README.md  ensure.py
docker/: .gitignore  README-elk.md  README.md  docker-compose.yml  env.example  exec-again.sh  exec-into.sh
docker/elk-elasticsearch/: Dockerfile
docker/elk-kibana/: Dockerfile
docker/http-dashy/: docker-compose.yml
docker/http-nginx/: docker-compose.yml
docker/http-stepca/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  issue-crt.sh
docker/influx-db/: docker-compose.yml
docker/influx-grafana/: MCARD Copy-1647284496214.json
docker/ingress-client/: Dockerfile
docker/ingress-server/: Dockerfile  build.sh  delete.sh  docker-compose-sync.yml  run.sh  (+2 more)
gui/: Dockerfile  Dockerfile-repo  Dockerfile-tribulations  README.md  config.yaml  play-loop.sh  requirements.txt  venv-activate.sh
ingress/: README.md
ingress/app-client/evo-ingress/: .gitignore  README.md  exec-test.sh  pyproject.toml  setup.py
ingress/app-client/evo-ingress/app/: README.md
ingress/app-client/evo-ingress/app/configs/: default.env.sh  default.headers.json  default.json  test.env.sh  test.json
ingress/app-client/evo-ingress/app/sample/: event.json
ingress/app-client/evo-ingress/app/src/: exec-ingress.sh  exec-watch.sh  gen-jwt.py  ingress-start.sh  ingress-stop.sh
ingress/app-client/evo-ingress/debian/: .gitignore  changelog  control  cookiecutter.json  copyright  install  rules  rules.old
ingress/app-client/evo-ingress/debian-tools/: README.md  aliases  link-tools.sh
(+120 files in other folders)
